[package]
name = "counter"
version = "1.0.0"
description = "Solana Program counter Example"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", features = [
    "derive"
] }
